syntax = "proto3";

package pb;

import "common.proto";

service Env {
  rpc CreateEnv (CreateEnvRequest) returns (EnvResponse) {}
  rpc GetEnv (EnvIdRequest) returns (EnvResponse) {}
  rpc DeleteEnv (EnvIdRequest) returns (PlainResponse) {}
  rpc GetEnvEncToken (EnvIdRequest) returns (StringResponse) {}
}

message EnvResponse {
  string BranchId = 1;
  string EnvId = 2;
  string Name = 3;
  string EnvEncToken = 4;
  int64 CreateTime = 5;
}

message CreateEnvRequest {
  bytes BranchId = 1;
  bytes EnvName = 2;
}

message EnvIdRequest {
  bytes EnvId = 1;
}